--- a/nodejs/02-api-rest/package.json
+++ b/nodejs/02-api-rest/package.json
@@ -18,6 +18,7 @@
     "@types/supertest": "^2.0.12",
     "eslint": "^8.39.0",
     "supertest": "^6.3.3",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
