--- a/nodejs/02-api-rest/package.json
+++ b/nodejs/02-api-rest/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --trace-warnings --loader tsx ./node_modules/.bin/knex",
     "lint": "eslint --ext .ts src --fix",
+    "build": "tsup src",
     "test": "vitest"
   },
   "keywords": [],
