--- a/nodejs/02-api-rest/package.json
+++ b/nodejs/02-api-rest/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --trace-warnings --loader tsx ./node_modules/.bin/knex",
@@ -29,6 +32,7 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.16.3",
     "knex": "^2.4.2",
+    "pg": "^8.10.0",
     "sqlite3": "^5.1.6",
     "zod": "^3.21.4"
   }
