--- a/nodejs/02-desafio/package.json
+++ b/nodejs/02-desafio/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "02-api-rest",
+  "name": "02-desafio",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.ts",
-  "engines": {
-    "node": ">=18.0.0"
-  },
+  "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --trace-warnings --loader tsx ./node_modules/.bin/knex",
@@ -19,21 +16,23 @@
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "dotenv": "^16.0.3",
-    "fastify": "^4.16.3",
+    "fastify": "^4.17.0",
     "knex": "^2.4.2",
-    "pg": "^8.10.0",
     "sqlite3": "^5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "@types/node": "^18.16.1",
+    "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
     "eslint": "^8.39.0",
     "supertest": "^6.3.3",
+    "tsconfig-paths": "^4.2.0",
     "tsup": "^6.7.0",
-    "tsx": "^3.12.6",
+    "tsx": "^3.12.7",
     "typescript": "^5.0.4",
-    "vitest": "^0.30.1"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1",
+    "vitest-tsconfig-paths": "^3.4.1"
   }
 }
