--- a/nodejs/03-api-solid/package.json
+++ b/nodejs/03-api-solid/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src/server.ts --format cjs --minify --dts-resolve --out-dir build",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,9 @@
     "prisma": "^4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
