--- a/nodejs/03-api-solid/package.json
+++ b/nodejs/03-api-solid/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src/server.ts --format cjs --minify --dts-resolve --out-dir build",
     "start": "node build/server.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.16.3",
+    "@vitest/coverage-c8": "^0.31.0",
     "prisma": "^4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
