--- a/nodejs/03-api-solid/package.json
+++ b/nodejs/03-api-solid/package.json
@@ -9,7 +9,8 @@
     "start": "node build/server.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.16.3",
     "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/ui": "^0.31.0",
     "prisma": "^4.13.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
