--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,24 +5,6 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "[!n]*/**": true,
-    "n[!o]*/**": true,
-    "no[!d]*/**": true,
-    "nod[!e]*/**": true,
-    "node[!j]*/**": true,
-    "nodej[!s]*/**": true,
-    "nodejs/[!0]*/**": true,
-    "nodejs/0[!3]*/**": true,
-    "nodejs/03[!-]*/**": true,
-    "nodejs/03-[!a]*/**": true,
-    "nodejs/03-a[!p]*/**": true,
-    "nodejs/03-ap[!i]*/**": true,
-    "nodejs/03-api[!-]*/**": true,
-    "nodejs/03-api-[!s]*/**": true,
-    "nodejs/03-api-s[!o]*/**": true,
-    "nodejs/03-api-so[!l]*/**": true,
-    "nodejs/03-api-sol[!i]*/**": true,
-    "nodejs/03-api-soli[!d]*/**": true
+    "**/Thumbs.db": true
   }
 }
