--- a/nodejs/03-api-solid/package.json
+++ b/nodejs/03-api-solid/package.json
@@ -7,8 +7,10 @@
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src/server.ts --format cjs --minify --dts-resolve --out-dir build",
     "start": "node build/server.js",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "pretest:e2e": "npm link ./prisma/vitest-environment-prisma && npm link vitest-environment-prisma",
+    "test:e2e": "vitest run --dir src/http",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
