--- a/.github/workflows/run-unit-tests-prj-03-lessons.yml
+++ b/.github/workflows/run-unit-tests-prj-03-lessons.yml
@@ -6,8 +6,9 @@ on:
 
 jobs:
   run-unit-tests:
-    run:
-      working-directory: nodejs/03-api-solid
+    defaults:
+      run:
+        working-directory: nodejs/03-api-solid
     name: Run Unit Tests
     runs-on: ubuntu-latest
 
