--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,21 +5,6 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "[!n]*/**": true,
-    "n[!l]*/**": true,
-    "nl[!w]*/**": true,
-    "nlw/[!s]*/**": true,
-    "nlw/s[!p]*/**": true,
-    "nlw/sp[!a]*/**": true,
-    "nlw/spa[!c]*/**": true,
-    "nlw/spac[!e]*/**": true,
-    "nlw/space[!t]*/**": true,
-    "nlw/spacet[!i]*/**": true,
-    "nlw/spaceti[!m]*/**": true,
-    "nlw/spacetim[!e]*/**": true,
-    "nlw/spacetime/[!w]*/**": true,
-    "nlw/spacetime/w[!e]*/**": true,
-    "nlw/spacetime/we[!b]*/**": true
+    "**/Thumbs.db": true
   }
 }
