--- a/nlw/spacetime/mobile/package.json
+++ b/nlw/spacetime/mobile/package.json
@@ -12,6 +12,7 @@
     "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "lucide-react": "^0.216.0",
     "nativewind": "^2.0.11",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "react": "18.2.0",
