--- a/nlw/spacetime/web/package.json
+++ b/nlw/spacetime/web/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.1.5",
+    "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "lucide-react": "0.216.0",
+    "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.216.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -25,7 +27,6 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "0.3.0"
+    "prettier-plugin-tailwindcss": "^0.2.8"
   }
 }
