--- a/nlw/spacetime/server/package.json
+++ b/nlw/spacetime/server/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "spacetime.server",
-  "version": "0.0.1",
+  "name": "server",
+  "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fastify/cors": "8.2.1",
-    "@prisma/client": "4.14.0",
-    "fastify": "4.17.0",
-    "zod": "3.21.4"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "@rocketseat/eslint-config": "1.2.0",
-    "@types/node": "20.1.5",
-    "prisma": "4.14.0",
-    "tsx": "3.12.7",
-    "typescript": "5.0.4"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^20.1.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.40.0",
+    "prisma": "^4.14.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@fastify/cors": "^8.2.1",
+    "@fastify/jwt": "^6.7.1",
+    "@prisma/client": "^4.14.0",
+    "axios": "^1.4.0",
+    "fastify": "^4.17.0",
+    "zod": "^3.21.4"
   }
 }
