nlw : spacetime :  mobile : 03

--- a/nlw/spacetime/mobile/.eslintrc.json
+++ b/nlw/spacetime/mobile/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends" : [
+  "extends": [
     "@rocketseat/eslint-config/react"
-  ],  "rules": {
+  ],
+  "rules": {
     "camelcase": "off"
   }
 }
